[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/school_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]
[ext_resource path="res://scenes/weapon_buttons.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/power_ups.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=7]
[ext_resource path="res://assets/music/gameover.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/fonts/dogica/OTF/dogicapixel.otf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="InputEventAction" id=3]
action = "pause"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "pause"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="main" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="SchoolBackground" parent="." instance=ExtResource( 1 )]
__meta__ = {
"_edit_horizontal_guides_": [ 6384.0 ],
"_edit_vertical_guides_": [  ]
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 540, 1112 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="power_ups" parent="." instance=ExtResource( 6 )]
position = Vector2( 548, 920 )
scale = Vector2( 0.7, 0.7 )

[node name="weapon_buttons" parent="." instance=ExtResource( 5 )]
position = Vector2( 288, 920 )
scale = Vector2( 0.7, 0.7 )

[node name="BossSpawnPoint" type="Position2D" parent="."]
position = Vector2( 540, 96 )

[node name="pause_button" type="CanvasLayer" parent="."]
layer = 100

[node name="Button" type="Button" parent="pause_button"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -26.0
margin_right = 26.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 4 )
text = "i"

[node name="Pause" type="Control" parent="pause_button/Button"]
pause_mode = 2
visible = false
margin_right = 486.0
margin_bottom = 4123.0
script = ExtResource( 7 )

[node name="Background" type="ColorRect" parent="pause_button/Button/Pause"]
margin_left = -515.0
margin_right = 567.0
margin_bottom = 1584.0
color = Color( 0.0352941, 0.403922, 0.0235294, 0.658824 )

[node name="button_dupe" type="Button" parent="pause_button/Button/Pause"]
margin_right = 52.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 6 )
text = "i"

[node name="back_to_main" type="Button" parent="pause_button/Button/Pause"]
margin_left = -242.0
margin_top = 408.0
margin_right = -108.0
margin_bottom = 452.0
rect_scale = Vector2( 4, 4 )
text = "Back to Main Menu"

[node name="total_coins" type="Label" parent="pause_button/Button/Pause"]
margin_left = -162.0
margin_top = 136.0
margin_right = -69.0
margin_bottom = 150.0
rect_scale = Vector2( 4, 4 )
text = "Total coins: $0"

[node name="current_high_score" type="Label" parent="pause_button/Button/Pause"]
margin_left = -162.0
margin_top = 247.0
margin_right = -66.0
margin_bottom = 263.0
rect_scale = Vector2( 4, 4 )
text = "High Score: 0M"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="WaitTime" type="Timer" parent="."]
wait_time = 1.5

[node name="Game_over" type="Label" parent="."]
visible = false
margin_left = 297.0
margin_top = 628.0
margin_right = 817.0
margin_bottom = 718.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
valign = 1

[node name="Clear_label" type="Label" parent="."]
visible = false
margin_left = 251.0
margin_top = 639.0
margin_right = 835.0
margin_bottom = 729.0
custom_fonts/font = SubResource( 2 )
text = "STAGE CLEAR"
valign = 1

[node name="clear_timer" type="Timer" parent="."]

[connection signal="boss_is_spawned" from="." to="Player" method="_on_main_boss_is_spawned"]
[connection signal="continuing" from="." to="SchoolBackground" method="_on_main_continuing"]
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="update_coins" from="Player" to="HUD" method="_on_Player_update_coins"]
[connection signal="update_first_aid_count" from="Player" to="power_ups" method="_on_Player_update_first_aid_count"]
[connection signal="boss_spawn" from="HUD" to="." method="_on_HUD_boss_spawn"]
[connection signal="stop_scroll" from="HUD" to="SchoolBackground" method="_on_HUD_stop_scroll"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="first_aid" from="power_ups" to="Player" method="_on_power_ups_first_aid"]
[connection signal="sponge" from="power_ups" to="power_ups" method="_on_power_ups_sponge"]
[connection signal="block" from="weapon_buttons" to="Player" method="_on_weapon_buttons_block"]
[connection signal="swing" from="weapon_buttons" to="Player" method="_on_weapon_buttons_swing"]
[connection signal="pressed" from="pause_button/Button" to="pause_button/Button/Pause" method="_on_Button_pressed"]
[connection signal="pressed" from="pause_button/Button/Pause/button_dupe" to="pause_button/Button/Pause" method="_on_button_dupe_pressed"]
[connection signal="pressed" from="pause_button/Button/Pause/back_to_main" to="." method="_on_back_to_main_pressed"]
[connection signal="timeout" from="WaitTime" to="." method="_on_WaitTime_timeout"]
[connection signal="timeout" from="clear_timer" to="." method="_on_clear_timer_timeout"]
